--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,14 @@
     flex-direction: column;
 }
 div h1{font-style: italic;}
+header {
+    background-image: url("./img3.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+#about{
+    height: 50vh;
+    color: white;
+    background-color: black;
+}
