add a link of petwebsite to my portfolio in index.html file

--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,8 @@ header {
     color: white;
     background-color: black;
 }
+#portfolio{
+    height: 50vh;
+    color: black;
+    background-color: white;
+}
