style contact on styles.css file

--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,8 @@ header {
     color: grey;
     background-color: black;
 }
+#contact{
+    height: 80vh;
+    color: grey;
+    background-color: black;
+}
