--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,9 @@ header {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     /* margin: 30px ; */
     line-height: 55px;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
-    
+
     
 }
 .main h2{
