--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body{
+    background-color: #fff;
+}
 /* Navbar */
 .navbar{
     display: flex;
@@ -58,17 +60,13 @@ header {
 #about{
     height: 50vh;
     color: white;
-    background-color: black;
+    background-color:black ;
 }
-#portfolio{
-    height: 50vh;
-    color: black;
-    background-color: white;
-}
+
 #service{
-    height: 50vh;
+    height: 100vh;
     color: grey;
-    background-color: black;
+    
 }
 #contact{
     height: 80vh;
@@ -127,6 +125,7 @@ header {
     display:center;
     margin: 20px;
     justify-content: center;
+    background-color:#6d6d6d ;
     box-shadow: rgba(0, 0, 0, 0.3) 12px 0px 12px 12px ;
 }
 .box{
@@ -137,9 +136,24 @@ header {
 
 }
 .box-1{
-    width: 300px;
-    height: 320px; 
+    width: 50%;
+    height: 50vh; 
     padding: 15px;
-    
 
+
+}
+.box-1 ,.box-2{
+    background-image: url(/images/service.jpg);
+}
+.box-2{
+    width: 50%;
+    height: 50vh;
+    padding: 15px;
+}
+.heading{
+    font-size: 50px;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+    display: center;
 }
