--- a/styles.css
+++ b/styles.css
@@ -58,11 +58,42 @@ header {
     /* backface-visibility: visible; */
 }
 #about{
-    height: 50vh;
-    color: white;
-    background-color:black ;
+  height: 100vh;
+  width: 100% 100%;
+  background-image: url(/images/about.jpg);
+  background-size: 100%;
+  background-size: cover;
+  color: #fff;
+    
 }
+#heading{
+    color:gray;
+    font-size: 70px;
+    font-weight: bold;
+    padding: 5px;  
+    letter-spacing: 3px;  
+}
+.heading-2{
+    justify-content: center;
+    display: flex;
+    font-weight: bold;
+    font-size: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
+
+}
+.text{
+    margin-left: 50px;
+    padding: 0;
+    line-height:30px;
+    letter-spacing: 2px;
+    font-size: 20px;
+
+}
+.images{
+    display: flex;
+    justify-content: center;
+}
 #service{
     height: 100vh;
     color: grey;
@@ -113,6 +144,8 @@ header {
     background-color: honeydew;
     font-size: 25px;
     font-weight: 800;
+    border-radius: 20%;
+    width: 8%;
 
 }
 /* services */
@@ -154,6 +187,11 @@ header {
     font-size: 50px;
     font-weight: bold;
     align-items: center;
+    display: flex;
     justify-content: center;
-    display: center;
+    color: limegreen;
+}
+.details{
+    font-style: italic;
+    color:lightslategray;
 }
