--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body{
 #home{
     display: flex;
     flex-direction: column;
+    color:rgb(73, 69, 58);
 }
  /* h1{font-style: italic;} */
 header {
