added image to contact.html

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ header {
       color: #fff;   
 }
 .main{
-    margin: 30px;
+    margin: 80px;
     margin-top: 150px;
     /* font-size: 35px; */
     font-family: Arial, Helvetica, sans-serif;
@@ -126,12 +126,14 @@ header {
 }
  .main h1{
     font-size: 75px;
-    color:#6d6d6d;
+    color:indigo;
     font-weight: bold;
     padding: 5px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     line-height: 55px;
-    justify-content: center;
+    font-style: italic;
+    display: flex;
+
 
     
 }
@@ -142,12 +144,21 @@ header {
 
 }
 .main button{
-    background-color: honeydew;
+    background-color:gray;
     font-size: 25px;
     font-weight: 800;
     border-radius: 20%;
     width: 8%;
+    color: indigo;
+    
 
+}
+#logo{
+    color:gray;
+    font-size: 40px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-style: italic;
 }
 /* services */
 .box-1,.box-2{
@@ -196,3 +207,6 @@ header {
     font-style: italic;
     color:lightslategray;
 }
+/* contact */
+
+
