--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ header {
 #about{
   height: 100vh;
   width: 100% 100%;
-  background-image: url(/images/about.jpg);
+  background-image: url(./images/about.jpg);
   background-size: 100%;
   background-size: cover;
   color: #fff;
