--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body{
 }
  /* h1{font-style: italic;} */
 header {
-    background-image: url("./images/home.jpeg");
+    background-image: url("./images/dark.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-size: 100%;
